--- a/front/userLogin.html
+++ b/front/userLogin.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>冷饮批发/用户登录</title>
+		<title>冷饮批发管理系统/用户登录</title>
 		<link rel="stylesheet" type="text/css" href="../js/easyui/themes/default/easyui.css">   
 		<link rel="stylesheet" type="text/css" href="../js/easyui/themes/icon.css">  
 		<link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css" />
