--- a/user/searchBuyDrink.html
+++ b/user/searchBuyDrink.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>冷饮批发/选择冷饮</title>
+		<title>冷饮批发-选择冷饮</title>
 		<link rel="stylesheet" type="text/css" href="../js/easyui/themes/default/easyui.css">   
 		<link rel="stylesheet" type="text/css" href="../js/easyui/themes/icon.css">  
 		<link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css" />
