类别管理完成

--- a/saler/main.html
+++ b/saler/main.html
@@ -86,7 +86,7 @@
                     'text':'类别管理',
                     'iconCls':'icon-ruby_gear',
                     'attributes':{
-                        'url':'bdm/mainProjMana.html'
+                        'url':'../back_page/coldcategory/list.html'
                     }
                 },
                 {
