--- a/front/searchDrink.html
+++ b/front/searchDrink.html
@@ -89,7 +89,7 @@
 				onDrop:function(e,source){
 					var brand = $(source).find('p:eq(0)').html();
 					var name = $(source).find('p:eq(1)').html();
-					var price = $(source).find('p:eq(2)').html();
+					var price = $(source).find('p:eq(3)').html();
 					addProduct(name, parseFloat(price.split('$')[1]));
 				}
 			});
@@ -157,6 +157,7 @@
 									<div>
 										<p>品牌：伊利</p>
 										<p>产品：伊利牧场</p>
+										<p>味道：红枣味</p>
 										<p>Price:$5</p>
 									</div>
 								</a>
@@ -167,6 +168,7 @@
 									<div>
 										<p>品牌：蒙牛</p>
 										<p>产品：绿色心情</p>
+										<p>味道：绿豆味</p>
 										<p>Price:$3.5</p>
 									</div>
 								</a>
@@ -177,6 +179,7 @@
 									<div>
 										<p>品牌：伊利</p>
 										<p>产品：伊利牧场</p>
+										<p>味道：巧克力味</p>
 										<p>Price:$5</p>
 									</div>
 								</a>
@@ -187,6 +190,7 @@
 									<div>
 										<p>品牌：蒙牛</p>
 										<p>产品：绿色心情</p>
+										<p>味道：巧克力味</p>
 										<p>Price:$3.5</p>
 									</div>
 								</a>
@@ -197,6 +201,7 @@
 									<div>
 										<p>品牌：伊利</p>
 										<p>产品：伊利牧场</p>
+										<p>味道：巧克力味</p>
 										<p>Price:$5</p>
 									</div>
 								</a>
@@ -207,6 +212,7 @@
 									<div>
 										<p>品牌：蒙牛</p>
 										<p>产品：绿色心情</p>
+										<p>味道：巧克力味</p>
 										<p>Price:$3.5</p>
 									</div>
 								</a>
